force-app/main/default/objects/Order__c/fields/Area_Id__c.field-meta.xml
<CustomField>
    <fullName>Area_Id__c</fullName>
    <label>Area Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>