force-app/main/default/objects/Order__c/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet+&quot;, &quot;+ Account__r.BillingPostalCode+&quot;, &quot;+ Account__r.BillingCity+&quot;, &quot;+ Account__r.BillingState+&quot;, &quot;+ Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>