force-app/main/default/objects/Order__c/fields/Chaincover__c.field-meta.xml
<CustomField>
    <fullName>Chaincover__c</fullName>
    <label>Chaincover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>