force-app/main/default/objects/Order__c/fields/Delivery_Remark__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Remark__c</fullName>
    <label>Delivery Remark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>