force-app/main/default/objects/Order__c/fields/Dispatch_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_End_Date__c</fullName>
    <label>Dispatch End Date</label>
    <type>Date</type>
</CustomField>