force-app/main/default/objects/Order__c/fields/Dispatch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Start_Date__c</fullName>
    <label>Dispatch Start Date</label>
    <type>Date</type>
</CustomField>