force-app/main/default/objects/Order__c/fields/Distributer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Distributer_Discount__c</fullName>
    <label>Distributer Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>