force-app/main/default/objects/Order__c/fields/DP_Discount__c.field-meta.xml
<CustomField>
    <fullName>DP_Discount__c</fullName>
    <label>DP Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>