force-app/main/default/objects/Order__c/fields/Financial_Approval__c.field-meta.xml
<CustomField>
    <fullName>Financial_Approval__c</fullName>
    <defaultValue>&apos;Not Started&apos;</defaultValue>
    <label>Financial Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>