force-app/main/default/objects/Order__c/fields/HMC_COCO_Store__c.field-meta.xml
<CustomField>
    <fullName>HMC_COCO_Store__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COCO Store</label>
    <type>Checkbox</type>
</CustomField>