force-app/main/default/objects/Order__c/fields/HMC_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Credit_Limit__c</fullName>
    <formula>Account__r.HMC_Credit_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>