force-app/main/default/objects/Order__c/fields/HMC_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>