force-app/main/default/objects/Order__c/fields/HMC_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>