force-app/main/default/objects/Order__c/fields/HMC_Dealer_Price__c.field-meta.xml
<CustomField>
    <fullName>HMC_Dealer_Price__c</fullName>
    <label>Dealer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>