force-app/main/default/objects/Order__c/fields/HMC_Due_date__c.field-meta.xml
<CustomField>
    <fullName>HMC_Due_date__c</fullName>
    <label>Due date</label>
    <type>Date</type>
</CustomField>