force-app/main/default/objects/Order__c/fields/HMC_Fullfill_by__c.field-meta.xml
<CustomField>
    <fullName>HMC_Fullfill_by__c</fullName>
    <label>Fullfill by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>