force-app/main/default/objects/Order__c/fields/HMC_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>