force-app/main/default/objects/Order__c/fields/HMC_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <type>DateTime</type>
</CustomField>