force-app/main/default/objects/Order__c/fields/HMC_InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>HMC_InvoiceId__c</fullName>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>