force-app/main/default/objects/Order__c/fields/HMC_IsActive__c.field-meta.xml
<CustomField>
    <fullName>HMC_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>