force-app/main/default/objects/Order__c/fields/HMC_Loose_Newkit__c.field-meta.xml
<CustomField>
    <fullName>HMC_Loose_Newkit__c</fullName>
    <label>Newkit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>