force-app/main/default/objects/Order__c/fields/HMC_Loose_Saddles__c.field-meta.xml
<CustomField>
    <fullName>HMC_Loose_Saddles__c</fullName>
    <label>Saddles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>