force-app/main/default/objects/Order__c/fields/HMC_MODEL__c.field-meta.xml
<CustomField>
    <fullName>HMC_MODEL__c</fullName>
    <label>MODEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>