force-app/main/default/objects/Order__c/fields/HMC_MRP__c.field-meta.xml
<CustomField>
    <fullName>HMC_MRP__c</fullName>
    <label>MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>