force-app/main/default/objects/Order__c/fields/HMC_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order_Date__c</fullName>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>