force-app/main/default/objects/Order__c/fields/HMC_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order_Number__c</fullName>
    <label>ERP Order number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>