force-app/main/default/objects/Order__c/fields/HMC_Order_Pushed_to_ERP_Date__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order_Pushed_to_ERP_Date__c</fullName>
    <label>Order Pushed to ERP Date</label>
    <type>Date</type>
</CustomField>