force-app/main/default/objects/Order__c/fields/HMC_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order_Status__c</fullName>
    <label>ERP Order Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>