force-app/main/default/objects/Order__c/fields/HMC_Order_Submitted__c.field-meta.xml
<CustomField>
    <fullName>HMC_Order_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Submitted</label>
    <type>Checkbox</type>
</CustomField>