force-app/main/default/objects/Order__c/fields/HMC_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>HMC_Payment_Amount__c</fullName>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>