force-app/main/default/objects/Order__c/fields/HMC_Payment_Voucher__c.field-meta.xml
<CustomField>
    <fullName>HMC_Payment_Voucher__c</fullName>
    <label>Payment Voucher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>