force-app/main/default/objects/Order__c/fields/HMC_Plant__c.field-meta.xml
<CustomField>
    <fullName>HMC_Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ludhiana</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>1010</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>