force-app/main/default/objects/Order__c/fields/HMC_Type__c.field-meta.xml
<CustomField>
    <fullName>HMC_Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>