force-app/main/default/objects/Order__c/fields/Invoice_Doc_URL__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Doc_URL__c</fullName>
    <formula>IF((ISBLANK(HMC_InvoiceId__c) || ISNULL(HMC_InvoiceId__c)),&apos;Document Not Available&apos;,HYPERLINK(&quot;/apex/AXDMS_InvoiceDocView?docId=&quot;&amp;HMC_InvoiceId__c,&quot;Open Document&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Doc URL</label>
    <type>Text</type>
</CustomField>