force-app/main/default/objects/Order__c/fields/MRP_Discount__c.field-meta.xml
<CustomField>
    <fullName>MRP_Discount__c</fullName>
    <label>MRP Discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>