force-app/main/default/objects/Order__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Order Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>