force-app/main/default/objects/Order__c/fields/Offer_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Description__c</fullName>
    <label>Offer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>