force-app/main/default/objects/Order__c/fields/Order_number__c.field-meta.xml
<CustomField>
    <fullName>Order_number__c</fullName>
    <displayFormat>O-{00000}</displayFormat>
    <label>SF Order number</label>
    <type>AutoNumber</type>
</CustomField>