force-app/main/default/objects/Order__c/fields/Parent_Order_Advance_Information__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Advance_Information__c</fullName>
    <formula>&quot;Total-ERP-Order&quot; + Total_ERP_Orders__c +
&quot;Order-Amount&quot; + TEXT(Amount__c) +
&quot;Created-Date&quot; + TEXT(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Order Advance Information&apos;s</label>
    <type>Text</type>
</CustomField>