force-app/main/default/objects/Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>product2__c</referenceTo>
    <relationshipName>OrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>