force-app/main/default/objects/Order__c/fields/Route_Plan__c.field-meta.xml
<CustomField>
    <fullName>Route_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Plan</label>
    <referenceTo>Route_Plan__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>