force-app/main/default/objects/Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Account__r.ShippingStreet+&quot;, &quot;+ Account__r.ShippingPostalCode+&quot;, &quot;+ Account__r.ShippingCity+&quot;, &quot;+  Account__r.ShippingState+&quot;, &quot;+ Account__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>