force-app/main/default/objects/Order__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Confirmation</fullName>
                <default>true</default>
                <label>Order Confirmation</label>
            </value>
            <value>
                <fullName>Truck Load Challan</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Order Initiation</fullName>
                <isActive>false</isActive>
                <label>Order Initiation</label>
            </value>
            <value>
                <fullName>Order Pending</fullName>
                <isActive>false</isActive>
                <label>Order Pending</label>
            </value>
            <value>
                <fullName>Order created in ERP</fullName>
                <isActive>false</isActive>
                <label>Order created in ERP</label>
            </value>
            <value>
                <fullName>Pushed to ERP</fullName>
                <isActive>false</isActive>
                <label>Pushed to ERP</label>
            </value>
            <value>
                <fullName>Qualification</fullName>
                <isActive>false</isActive>
                <label>Qualification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>