force-app/main/default/objects/Order__c/fields/Total_ERP_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_ERP_Orders__c</fullName>
    <label>Total ERP Orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>