force-app/main/default/objects/Order__c/recordTypes/Child_Order.recordType-meta.xml
<RecordType>
    <fullName>Child_Order</fullName>
    <active>true</active>
    <label>Child Order</label>
</RecordType>