force-app/main/default/objects/Order__c/recordTypes/COCO_Store_Confirm_Order.recordType-meta.xml
<RecordType>
    <fullName>COCO_Store_Confirm_Order</fullName>
    <active>true</active>
    <label>COCO Store Confirm Order</label>
</RecordType>