force-app/main/default/objects/Order__c/recordTypes/Order_Line_Item.recordType-meta.xml
<RecordType>
    <fullName>Order_Line_Item</fullName>
    <active>true</active>
    <label>Order Line Item</label>
</RecordType>