force-app/main/default/objects/Order__c/recordTypes/Secondry_old.recordType-meta.xml
<RecordType>
    <fullName>Secondry_old</fullName>
    <active>true</active>
    <label>secondry old</label>
</RecordType>