force-app/main/default/objects/Order__c/validationRules/Dispatch_Field_Required_On_StageDispatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Dispatch_Field_Required_On_StageDispatch</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(StageName__c, &quot;Dispatch&quot;),
    ISBLANK(Dispatch_End_Date__c),
	ISBLANK(Dispatch_Start_Date__c)
)</errorConditionFormula>
    <errorMessage>Dispatch Start Date AND Dispatch End Date is required when Stage is &quot;Dispatch&quot;</errorMessage>
</ValidationRule>