force-app/main/default/objects/Order__c/validationRules/Financial_Approval_Pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Financial_Approval_Pending</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT (AND ( OR (ISBLANK(Truck_No__c), ISBLANK( Docket_No__c ) , ISBLANK( Driver_Name__c ) ))),  NOT(ISPICKVAL( Financial_Approval__c , &apos;Approved&apos;)),ISPICKVAL( StageName__c , &apos;Invoice&apos;)  )</errorConditionFormula>
    <errorMessage>Please Submit Order to Financial team and take approval to proceed</errorMessage>
</ValidationRule>